fix z-index

--- a/_assets/scss/common/_right-menu.scss
+++ b/_assets/scss/common/_right-menu.scss
@@ -2,6 +2,10 @@
   background: darken($blue, 20%);
 }
 
+.js-off-canvas-exit{
+  z-index: 30;
+}
+
 .right-menu{
   padding: 10px;
 
